unsupported/static_h/external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-object-expression1.js
async function f() { return {g: await} }
